@@ -1,4 +1,8 @@
 2005-05-04 Francois Proulx <francois.proulx@gmail.com>
+	* Improved caching
+	* Wrote very basic gridview code for Flickr
+	
+2005-05-04 Francois Proulx <francois.proulx@gmail.com>
 	* Implemented caching for Flickr
 	* Need to contact Phlickr to see how we could do better, since serialize does not work OK on objects
 	
